--- a/project.glade
+++ b/project.glade
@@ -253,7 +253,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <child>
-                  <object class="GtkListBox" id="listbox_books">
+                  <object class="GtkListBox" id="listbox_attacks">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="margin_left">10</property>
